force-app/main/default/objects/AOW__c/AOW__c.object-meta.xml
<CustomObject>
    <label>AOW</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>AOW Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOW</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>