force-app/main/default/objects/AOW__c/fields/adjustment__c.field-meta.xml
<CustomField>
    <fullName>adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustment</label>
    <type>Checkbox</type>
</CustomField>