force-app/main/default/objects/AOW__c/fields/productLine__c.field-meta.xml
<CustomField>
    <fullName>productLine__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Concore</fullName>
            </value>
            <value>
                <fullName>Glass Ceramics</fullName>
            </value>
            <value>
                <fullName>HHIT Parts</fullName>
            </value>
            <value>
                <fullName>LCG</fullName>
            </value>
            <value>
                <fullName>Phire/DAR</fullName>
            </value>
            <value>
                <fullName>Raw Glass</fullName>
            </value>
            <value>
                <fullName>Screen Protector</fullName>
            </value>
            <value>
                <fullName>SR+</fullName>
            </value>
            <value>
                <fullName>Unallocated</fullName>
            </value>
            <value>
                <fullName>Vibrant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>