force-app/main/default/objects/AOW__c/fields/remark__c.field-meta.xml
<CustomField>
    <fullName>remark__c</fullName>
    <label>Remark</label>
    <length>120</length>
    <type>Text</type>
</CustomField>