force-app/main/default/objects/AOW__c/recordTypes/BB_AOW.recordType-meta.xml
<RecordType>
    <fullName>BB_AOW</fullName>
    <active>true</active>
    <label>BB AOW</label>
</RecordType>