force-app/main/default/objects/AOW__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>oemRegionCountry__c</columns>
    <columns>Account__c</columns>
    <columns>date__c</columns>
    <columns>amount__c</columns>
    <columns>productLine__c</columns>
    <columns>adjustment__c</columns>
    <columns>remark__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>